styles/main.css
html {
  box-sizing: border-box;
}

*, *:before, *:after {
  box-sizing: inherit;
}

body {
  margin: 0;
  color: #333;
  background-color: #fafafa;
  font-family: 'Open Sans', sans-serif;
}

body.modal-open {
  overflow: hidden;
}

a {
  color: #07a;
}

a:visited {
  color: #941352;
}

header {
  height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  position: relative;
  overflow: hidden;
}

nav {
  width: 100%;
  height: 55px;
  border-bottom: 4px solid #a2a2a2;

  display: flex;
  justify-content: center;
  align-items: center;

  background-color: #181818;
  color: #fafafa;
}

nav.fixed {
  position: fixed;
  top: 0px;
}

nav a {
  margin: 0px 25px;
  transition: color .25s;
  text-decoration: none;
  color: inherit;
  transition: color 0.25s;
}

nav a:visited {
  color: #fefefe;
}

nav a.active {
  color: #a2a2a2;
}

@media (hover: hover) {
  nav a:hover {
    color: #a2a2a2;
  }
}

section {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 40px 10px;
}

section:nth-child(2n+1) {
  background-color: #efefef;
}

footer {
  display: flex;
  justify-content: center;
  align-items: center;

  height: 100px;
  border-top: 4px solid #a2a2a2;
  background-color: #212121;
}

footer a {
  text-decoration: none;
  margin: 0px 30px;
  border-radius: 4px;
  font-size: 36px;
  color: #fafafa;
  transition: all 0.25s;
}

footer a:visited {
  color: #fefefe;
}

footer a:hover {
  color: #a2a2a2;
}

h1 {
  font-family: 'Roboto Slab', serif;
  text-align: center;
  color: #fafafa;
  font-size: 48pt;
}

h2 {
  font-size: 20pt;
  text-align: center;
}

h2::after {
  content: '';
  display: block;
  width: 50px;
  border-bottom: 2px solid #333;
  margin: 10px auto;
}

h3, h4 {
  margin: 0px 0px 20px 0px;
}

p {
  margin: 0;
}

#particles-js {
  position: absolute;
  background-color: #212121;
  top: 0px;
  bottom: 0px;
  left: -100px;
  right: -100px;
  z-index: -1;
}

#title {
  flex: 1;
}

.about-content {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  max-width: 940px;
  width: 100%;
  padding: 40px 0px;
}

.about-content img {
  width: 250px;
  border-radius: 125px;
}

.about-text {
  flex: 1;
  margin: 0px 40px;
}

.about-text p {
  margin: 5px 0px;
}

.container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  max-width: 940px;
  width: 100%;
}

.outline-button-dark {
  color: #212121;
  background-color: transparent;
  font-family: inherit;
  font-size: inherit;
  border: 2px solid #212121;
  line-height: 30px;
  padding: 0px 30px;
  cursor: pointer;
  transition: all 0.25s;
}

.outline-button-dark:hover {
  color: #fefefe;
  background-color: #212121;
}

.work-item {
  display: flex;
  width: 100%;
  padding: 40px 0px;
  border-top: 1px solid #a2a2a2;
}

.work-item:first-of-type {
  border-top: none;
}

.work-item-content {
  display: flex;
  flex-direction: column;
  align-items: center;
}

@media (min-width: 1000px) {
  .work-preview-image {
    display: block;
    width: 400px;
  }

  .work-item h3 {
    align-self: flex-start;
  }

  .work-item-content {
    padding-left: 20px;
  }

  .open-modal-button {
    margin-top: auto;
  }
}

@media (max-width: 999px) {
  .about-content {
    flex-direction: column;
  }

  .about-text {
    margin: 40px 0px 0px 0px;
    max-width: 800px;
  }

  .work-item {
    flex-direction: column;
    align-items: center;
  }

  .work-preview-image {
    max-width: 550px;
    width: 100%;
  }

  .work-item-content {
    margin-top: 20px;
    max-width: 800px;
    width: 100%;
  }

  .open-modal-button {
    margin-top: 30px;
  }
}

.modal {
  display: none;
  position: fixed;
  top: 0px;
  bottom: 0px;
  left: 0px;
  right: 0px;
  background-color: rgba(0, 0, 0, 0.7);
  z-index: 100;
}

.close-modal-button {
  margin-top: auto;
}

@media (min-width: 700px) {
  .modal-pane {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);

    background-color: #fefefe;
    max-width: 700px;
    width: 100%;
  }

  .description-list {
    height: 200px;
  }
}

@media (max-width: 699px) {
  .modal-pane {
    position: absolute;
    top: 0px;
    left: 0px;
    bottom: 0px;
    right: 0px;
    background-color: #fefefe;

    display: flex;
    flex-direction: column;
  }

  .modal-content {
    flex: 1;
  }
}

.modal-content {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 15px;
}

.description-list {
  position: relative;
  width: 100%;
}

.description-list p {
  position: absolute;
  top: 0px;
  left: 0px;
  bottom: 0px;
  right: 0px;
  transition: all 0.25s;
}

.Wallop-button {
  display: flex;
  align-items: center;

  position: absolute;
  top: 0px;
  bottom: 0px;
  font-size: 28px;
  cursor: pointer;

  color: rgba(255, 255, 255, 0.5);
  transition: all 0.25s;

  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
}

.Wallop-button:hover {
  color: rgba(255, 255, 255, 1);
}

.Wallop-button i {
  background-color: rgba(0, 0, 0, 0.3);
  padding: 15px;
}

.Wallop-buttonPrevious {
  justify-content: flex-start;
  left: 0px;
  right: 50%;
}

.Wallop-buttonPrevious i {
  border-radius: 0px 10px 10px 0px;
}

.Wallop-buttonNext {
  justify-content: flex-end;
  left: 50%;
  right: 0px;
}

.Wallop-buttonNext i {
  border-radius: 10px 0px 0px 10px;
}

.Wallop-item img {
  width: 100%;
  border-bottom: 4px solid #212121;
}

form {
  display: flex;
  flex-direction: column;
  align-items: center;
  max-width: 500px;
  width: 100%;
}

input,
textarea {
  width: 100%;
  margin: 2px;
  padding: 5px;
  font-family: inherit;
  font-size: inherit;
}

textarea {
  resize: vertical;
  min-height: 150px;
}

.ajax-button {
  position: relative;
  margin-top: 15px;
  transition: all 0.3s ease;
}

.ajax-button.success {
  color: transparent;
}

.ajax-button.success::before {
  font-family: 'Font Awesome 5 Free';
  font-weight: 900;
  content: '\f00c';
  color: #333;
  background-color: #fafafa;
  position: absolute;
  top: 0px;
  bottom: 0px;
  left: 0px;
  right: 0px;
  transition: all 0.3s ease;
}

/* Inspired by https://codepen.io/sfaisal/pen/rVWBXp/ */

.ajax-button.loading {
  font-size: 0;
  width: 34px;
  height: 34px;
  border-radius: 17px;
  padding: 0;
  border: 3px solid #000;
  border-bottom: 3px solid rgba(255, 255, 255, 0.0);
  border-left: 3px solid rgba(255, 255, 255, 0.0);
  background-color: transparent !important;
  animation-name: rotateAnimation;
  -webkit-animation-name: wk-rotateAnimation;
  animation-duration: 1s;
  -webkit-animation-duration: 1s;
  animation-delay: 0.2s;
  -webkit-animation-delay: 0.2s;
  animation-iteration-count: infinite;
  -webkit-animation-iteration-count: infinite;
}

@keyframes rotateAnimation {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

@-webkit-keyframes wk-rotateAnimation {
  0% {
    -webkit-transform: rotate(0deg);
  }
  100% {
    -webkit-transform: rotate(360deg);
  }
}

